# PixErase

./: .dockerignore  README.md  docker-compose.prod.yaml  mkdocs.yml  Статья not Final (5).docx
backend/: .env.dev  .env.dist  README.md  alembic.ini  docker-compose.dev.yaml  docker-compose.prod.yaml  justfile  pyproject.toml
backend/deploy/dev/minio/: minio_entrypoint.sh
backend/deploy/dev/pix_erase/: Dockerfile  api_entrypoint.sh  worker_entrypoint.sh
backend/deploy/pix_erase/: Dockerfile
backend/deploy/prod/grafana/dashboards/: api-metrics.json
backend/deploy/prod/grafana/provisioning/dashboards/: dashboards.yaml
backend/deploy/prod/grafana/provisioning/datasources/: datasource.yaml
backend/deploy/prod/loki/: config.yaml
backend/deploy/prod/pix_erase/: Dockerfile  api_entrypoint.sh  scheduler_entrypoint.sh  worker_entrypoint.sh
backend/deploy/prod/prometheus/: prometheus.yml
backend/deploy/prod/vector/: vector.toml  vector.yaml
backend/src/pix_erase/: grpc_app.py  scheduler.py  web.py  worker.py
backend/src/pix_erase/application/: consts.py
backend/src/pix_erase/application/auth/: log_in.py  log_out.py  logout.py  read_current_user.py  sign_up.py
backend/src/pix_erase/application/commands/image/: compare_images.py  compress_image.py  convert_image_to_grayscale.py  create_image.py  delete_image.py  grayscale_image.py  remove_background_image.py  remove_watermark_from_image.py  rotate_image.py  upscale_image.py
backend/src/pix_erase/application/commands/internet_protocol/: analyze_domain_info.py  ping_internet_protocol.py  scan_common_ports.py  scan_port.py  scan_port_range.py  scan_ports.py
backend/src/pix_erase/application/commands/user/: activate_user.py  change_user_email.py  change_user_name.py  change_user_password.py  create_user.py  delete_user.py  delete_user_by_id.py  grant_admin.py  grant_admin_by_id.py  revoke_admin.py  revoke_admin_by_id.py
backend/src/pix_erase/application/common/ports/: access_revoker.py  event_bus.py  identity_provider.py
backend/src/pix_erase/application/common/query_models/: image.py  user.py
backend/src/pix_erase/application/common/query_params/: pagination.py  user_filters.py
backend/src/pix_erase/application/common/services/: auth_session.py  colorization_service.py  current_user.py  image_transformation_service.py
backend/src/pix_erase/application/errors/: auth.py  base.py  image.py  query_params.py  task.py  user.py
backend/src/pix_erase/application/event_handlers/users/: user_created_event_handlers.py
backend/src/pix_erase/application/queries/images/: read_by_id.py  read_exif_from_image_by_id.py  reverse_search_image.py
backend/src/pix_erase/application/queries/internet_protocol/: analyze_domain_info.py  ping_internet_protocol.py  read_ip_info.py  scan_common_ports.py  scan_port.py  scan_port_range.py  scan_ports.py
backend/src/pix_erase/application/queries/tasks/: read_task_by_id.py
backend/src/pix_erase/application/queries/users/: read_all.py  read_by_id.py
backend/src/pix_erase/domain/common/entities/: base_aggregate.py  base_entity.py
backend/src/pix_erase/domain/common/errors/: time_errors.py
backend/src/pix_erase/domain/common/services/: base.py
backend/src/pix_erase/domain/common/values/: base.py
backend/src/pix_erase/domain/image/: events.py
backend/src/pix_erase/domain/image/entities/: image.py  image_comparison.py
backend/src/pix_erase/domain/image/errors/: image.py
backend/src/pix_erase/domain/image/ports/: converter.py  factory_converter.py  id_generator.py  image_ai_upscaler_converter.py  image_background_remove_converter.py  image_color_to_gray_converter.py  image_comparer_converter.py  image_compress_converter.py  image_crop_converter.py  image_nearest_neighbour_upscale_converter.py  image_resizer.py  image_rotation_converter.py  image_upscaler_converter.py  image_watermark_remover_converter.py
backend/src/pix_erase/domain/image/services/: colorization_service.py  contracts.py  image_service.py  transformation_service.py
backend/src/pix_erase/domain/image/values/: comparison_id.py  image_id.py  image_name.py  image_scale.py  image_size.py  image_upscale_algorithm.py
backend/src/pix_erase/domain/internet_protocol/entities/: internet_domain.py
backend/src/pix_erase/domain/internet_protocol/errors/: __init__.py  internet_protocol.py
backend/src/pix_erase/domain/internet_protocol/ports/: __init__.py  certificate_transparency_port.py  dns_resolver_port.py  (+5 more)
backend/src/pix_erase/domain/user/: events.py
backend/src/pix_erase/infrastructure/cache/: cache_store.py  provider.py  redis_cache_store.py
backend/src/pix_erase/infrastructure/errors/: base.py  file_storage.py  http.py  image_converters.py  transaction_manager.py
backend/src/pix_erase/infrastructure/http/: base.py  httpx_client.py  provider.py  traceable_client.py
backend/src/pix_erase/infrastructure/metrics/: manager.py  metrics_container.py  route.py
backend/src/pix_erase/infrastructure/persistence/: provider.py
backend/src/pix_erase/infrastructure/scheduler/: task_iq_task_scheduler.py
backend/src/pix_erase/infrastructure/task_manager/: images_tasks.py  task_iq_image_task_manager.py
backend/src/pix_erase/infrastructure/tracing/: provider.py
backend/src/pix_erase/presentation/errors/: base.py  image.py
backend/src/pix_erase/setup/: bootstrap.py  ioc.py
backend/src/pix_erase/setup/config/: asgi.py  cache.py  database.py  grpc.py  http.py  logs.py  metrics.py  obversability.py  rabbit.py  s3.py  security.py  settings.py  tracing.py  worker.py
backend/tests/integration/: conftest.py
backend/tests/unit/: test_lifespans.py
backend/tests/unit/application/: conftest.py
backend/tests/unit/domain/common/: test_base.py
backend/tests/unit/factories/: internet_protocol_entity.py  named_entity.py  settings_data.py  tagged_entity.py  user_entity.py  value_objects.py
backend/tests/unit/setup/: test_cfg_asgi.py  test_cfg_cache.py  test_cfg_database.py  test_cfg_http.py  test_cfg_observability.py  test_cfg_rabbit.py  test_cfg_s3.py  test_cfg_security.py  test_cfg_worker.py
(+319 files in other folders)
