[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "pix_erase.__version__" }

[project]
name = "pix_erase"
dynamic = ["version"]
description = "backend for pix erase"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Danil Kovalev", email = "dan.kovalev2013@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "aioboto3>=15.1.0",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "bazario>=0.4.2",
    "bcrypt>=4.3.0",
    "dishka>=1.7.1",
    "exif>=1.6.1",
    "fastapi>=0.116.2",
    "opencv-contrib-python>=4.12.0.88",
    "opencv-python>=4.12.0.88",
    "orjson>=3.11.3",
    "pydantic[email]>=2.11.9",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "rembg>=2.0.67",
    "sqlalchemy>=2.0.43",
    "structlog>=25.4.0",
    "taskiq-aio-pika>=0.4.3",
    "taskiq-redis>=1.1.0",
    "taskiq[reload]>=0.11.18",
    "uvicorn>=0.36.0",
    "uvloop==0.21.0; sys_platform != 'win32'",
]

[project.optional-dependencies]
test = [
    "coverage[toml]==7.8.2",
    "pytest==8.4.0",
    "pytest-asyncio==0.26.0",
    "httpx==0.28.1",
    "testcontainers>=4.10.0"
]
lint = [
    "ruff==0.11.13",
    "bandit==1.8.3",
    "codespell==2.4.1",
    "mypy==1.16.0",
    "basedpyright==1.29.2",
    # semgrep depends on opentelemetry-exporter-otlp>=v1.25,<1.33.0
    "semgrep==1.124.0",
    "opentelemetry-exporter-otlp>=1.25.0,<1.35.0",
]
dev = [
    "pix_erase[test,lint]",
    "pre-commit==4.2.0",
    "detect-secrets==1.5.0",
    "python-dotenv>=1.1.0"
]

[tool.pytest.ini_options]
xfail_strict = true
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = ["value_objects"]

[tool.basedpyright]
include = ["src", "tests"]
ignore = ["**/__pycache__", "**/alembic"]
pythonVersion = "3.12"
reportAny = false
reportUnusedCallResult = false

[tool.mypy]
mypy_path = "src"
files = ["src"]
exclude = ["src/pix_erase/setup/config/"]
python_version = "3.12"

strict = true
pretty = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
allow_redefinition = true
allow_untyped_calls = true
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_decorators = false
show_error_codes = true
show_error_context = true
show_column_numbers = true
check_untyped_defs = true
namespace_packages = true
ignore_missing_imports = true

[tool.ruff]
src = ["src"]
include = ["src/**.py", "tests/**.py"]
exclude = ["src/pix_erase/setup/config/**.py"]
target-version = "py312"
line-length = 120
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "CPY001", "A005", "TRY003", "COM812"]

[tool.ruff.lint.per-file-ignores]
"src/pix_erase/infrastructure/persistence/alembic/**" = ["ERA001", "INP001"]
"tests/**" = ["S101"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["src", "tests"]
no-lines-before = ["local-folder"]

[tool.coverage.run]
parallel = true
branch = true
concurrency = ["thread", "multiprocessing"]
source = ["src", "tests"]
omit = ["**/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_also = [
    'if TYPE_CHECKING:',
    "if __name__ == .__main__.:",
    '@(abc\.)?abstractmethod',
    "raise NotImplementedError",
    "pass",
    '\.\.\.',
]
omit = [
    'src/pix_erase/infrastructure/persistence/adapters/*.py',
    'src/pix_erase/infrastructure/persistence/alembic/env.py',
    '*/__init__.py',
]

[tool.semgrep]
paths = ["src"]
include = ["src"]

[tool.bandit]
targets = "src"

[tool.codespell]
skip = "*.pyi,*.pyc,./site"
