[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "pix_erase.__version__" }

[project]
name = "pix_erase"
dynamic = ["version"]
description = "backend for pix erase"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Danil Kovalev", email = "dan.kovalev2013@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "aioboto3==15.1.0",
    "alembic==1.16.5",
    "asgi-monitor==0.6.0",
    "asyncpg==0.30.0",
    "bazario==0.4.2",
    "bcrypt==4.3.0",
    "dishka==1.7.1",
    "exif==1.6.1",
    "fastapi==0.116.2",
    "httpx>=0.28.1",
    "opencv-contrib-python-headless==4.12.0.88",
    "opentelemetry-exporter-otlp==1.37.0",
    "orjson==3.11.3",
    "pydantic[email]==2.11.9",
    "pyjwt==2.10.1",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "rembg[cpu]==2.0.67",
    "sqlalchemy==2.0.43",
    "structlog==25.4.0",
    "taskiq-aio-pika==0.4.3",
    "taskiq-redis==1.1.0",
    "taskiq[reload, metrics]>=0.11.18",
    "tenacity>=9.1.2",
    "uvicorn==0.36.0",
    "uvloop==0.21.0; sys_platform != 'win32'",
]

[project.optional-dependencies]
test = [
    "coverage[toml]==7.10.7",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "httpx==0.28.1",
    "testcontainers[minio,postgres,rabbitmq,redis]==4.10.0"
]
lint = [
    "ruff==0.14.0",
    "bandit==1.8.6",
    "codespell==2.4.1",
    "mypy==1.18.2",
    "basedpyright==1.29.2",
    "semgrep==1.139.0"
]
dev = [
    "pix_erase[test,lint]",
    "pre-commit==4.3.0",
    "detect-secrets==1.5.0",
    "python-dotenv>=1.1.0",
    "pytest-env==1.2.0",
]

[project.urls]
Homepage = "https://github.com/C3EQUALZz/PixErase"
Documentation = "https://github.com/C3EQUALZz/PixErase/README.md"
Repository = "https://github.com/C3EQUALZz/PixErase"
Issues = "https://github.com/C3EQUALZz/PixErase/issues"

[tool.pytest.ini_options]
xfail_strict = true
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = ["value_objects"]
env = [
    "MINIO_HOST=localhost",
    "MINIO_PORT=9000",
    "MINIO_ROOT_USER=minioadmin",
    "MINIO_ROOT_PASSWORD=minioadmin",
    "MINIO_IMAGES_BUCKET=pix-erase-images",
    "POSTGRES_HOST=localhost",
    "POSTGRES_USER=postgres",
    "POSTGRES_PASSWORD=postgres",
    "POSTGRES_DB=testdatabase",
    "POSTGRES_PORT=5432",
    "POSTGRES_DRIVER=asyncpg",
    "DB_POOL_PRE_PING=True",
    "DB_POOL_RECYCLE=3600",
    "DB_POOL_SIZE=50",
    "DB_POOL_MAX_OVERFLOW=25",
    "DB_ECHO=False",
    "DB_AUTO_FLUSH=False",
    "DB_EXPIRE_ON_COMMIT=False",
    "DB_DEBUG=True",
    "DB_FUTURE=True",
    "RABBITMQ_HOST=localhost",
    "RABBITMQ_PORT=5672",
    "RABBITMQ_UI_PORT=15672",
    "RABBITMQ_DEFAULT_USER=guest",
    "RABBITMQ_DEFAULT_PASS=guest",
    "UVICORN_HOST=0.0.0.0",
    "UVICORN_PORT=8080",
    "PROMETHEUS_WORKER_SERVER_HOST=0.0.0.0",
    "PROMETHEUS_WORKER_SERVER_PORT=8081",
    "REDIS_HOST=localhost",
    "REDIS_PASSWORD=default",
    "REDIS_USER=default",
    "REDIS_USER_PASSWORD=default",
    "REDIS_PORT=6379",
    "REDIS_CACHE_DB=0",
    "REDIS_WORKER_DB=1",
    "REDIS_SCHEDULE_SOURCE_DB=2",
    "REDIS_MAX_CONNECTIONS=20",
    "JWT_SECRET=REPLACE_THIS_WITH_YOUR_OWN_SECRET_VALUE",
    "JWT_ALGORITHM=HS256",
    "PEPPER=REPLACE_THIS_WITH_YOUR_OWN_SECRET_PEPPER_VALUE",
    "SESSION_TTL_MIN=5",
    "SESSION_REFRESH_THRESHOLD=0.2",
    "SECURE=0",
    "TEMPO_GRPC_PORT=4317",
    "TEMPO_HOST=localhost"
]

[tool.basedpyright]
include = ["src", "tests"]
ignore = ["**/__pycache__", "**/alembic"]
pythonVersion = "3.12"
reportAny = false
reportUnusedCallResult = false

[tool.mypy]
mypy_path = "src"
plugins = "pydantic.mypy"
files = ["src"]
exclude = ["src/pix_erase/setup/config/"]
python_version = "3.12"

strict = true
pretty = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
allow_redefinition = true
allow_untyped_calls = true
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_decorators = false
show_error_codes = true
show_error_context = true
show_column_numbers = true
check_untyped_defs = true
namespace_packages = true
ignore_missing_imports = true

[tool.ruff]
src = ["src"]
include = ["src/**.py", "tests/**.py"]
exclude = ["src/pix_erase/setup/config/**.py"]
target-version = "py312"
line-length = 120
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "CPY001", "A005", "TRY003", "COM812", "FBT001", "FBT003", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"src/pix_erase/infrastructure/persistence/migrations/**" = ["ERA001", "INP001", "E501", "PLC0415"]
"src/pix_erase/infrastructure/http/**" = ["ASYNC109", "PLR2004", "ANN401"]
"src/pix_erase/domain/internet_protocol/**" = ["PLR2004", "ASYNC109"]
"src/pix_erase/application/common/ports/scheduler/task_scheduler.py" = ["ANN401"]
"src/pix_erase/application/commands/**" = ["PLR0912", "C901", "PLR0915"]
"src/pix_erase/application/queries/**" = ["PLR0912", "C901", "PLR0915"]
"src/pix_erase/domain/image/values/image_name.py" = ["RUF001"]
"src/pix_erase/infrastructure/adapters/internet_protocol/**" = ["ASYNC109", "PLR2004", "TRY301"]
"src/pix_erase/infrastructure/adapters/persistence/**" = ["PGH003"]
"src/pix_erase/presentation/http/v1/routes/image/create_image/handlers.py" = ["S311"]
"src/pix_erase/infrastructure/adapters/image_converters/**" = ["PLR2004"]
"tests/**" = ["S101", "PLR0913", "S106", "PLR2004"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["src", "tests"]
no-lines-before = ["local-folder"]

[tool.coverage.run]
parallel = true
branch = true
concurrency = ["thread", "multiprocessing"]
source = ["src", "tests"]
omit = ["**/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_also = [
    'if TYPE_CHECKING:',
    "if __name__ == .__main__.:",
    '@(abc\.)?abstractmethod',
    "raise NotImplementedError",
    "pass",
    '\.\.\.',
]
omit = [
    'src/pix_erase/infrastructure/persistence/adapters/*.py',
    'src/pix_erase/infrastructure/persistence/alembic/env.py',
    '*/__init__.py',
]

[tool.semgrep]
paths = ["src"]
include = ["src"]

[tool.bandit]
targets = "src"

[tool.codespell]
skip = "*.pyi,*.pyc,./site"
